feat: add search bar

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -4,6 +4,8 @@ components:
   theme_switcher:
     theme: theme
     change_theme: change theme
+  search_bar:
+    placeholder: Search...
 pages:
   index:
     title: nuxt 3[]awesome[]starter
